src/Project3/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
        package Parse;
        import java.util.LinkedList;
        public class Parser implements ParserConstants {

//<DEFAULT>
//SKIP :
//{
//   <~[]> { error("Illegal token"); }
//}
  final public Absyn.Program Program() throws ParseException {
  Absyn.ClassDecl cd;
  Absyn.ThreadDecl td;
//  Absyn.MainClassDecl mcd;
  Token name = null;
  LinkedList<Absyn.ClassDecl> cds = new LinkedList<Absyn.ClassDecl>();
  LinkedList<Absyn.ThreadDecl> tds = new LinkedList<Absyn.ThreadDecl>();
    cd = MainClassDecl();
                              cds.add(cd);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 35:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(4)) {
        cd = ClassDecl();
                                                                           cds.add(cd);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 35:
          td = ThreadDecl();
                                                                                                               cds.add(td);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
    {if (true) return new Absyn.Program(cds);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.ClassDecl MainClassDecl() throws ParseException {
  Token name = null; Token parent = null;
  Absyn.VarDecl vd;
  LinkedList<Absyn.VarDecl> vds = new LinkedList<Absyn.VarDecl>();
  Absyn.Stmt st;
  LinkedList<Absyn.Stmt> sts = new LinkedList<Absyn.Stmt>();
  LinkedList<Absyn.Formal> fms = new LinkedList<Absyn.Formal>();
  Absyn.Formal fm;
    jj_consume_token(35);
    name = jj_consume_token(ID);
    jj_consume_token(21);
    jj_consume_token(67);
    jj_consume_token(69);
    jj_consume_token(81);
    jj_consume_token(55);
    jj_consume_token(6);
    fm = Formal();
                                                                            fms.add(fm);
    jj_consume_token(7);
    jj_consume_token(21);
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      vd = VarDecl();
                                                                                                                                 vds.add(vd);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 21:
      case 42:
      case 49:
      case 74:
      case 77:
      case 83:
      case 85:
      case 92:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      st = Stmt();
                                                                                                                                                                 sts.add(st);
    }
    jj_consume_token(22);
    jj_consume_token(22);
Absyn.IntegerLiteral returnnum = new Absyn.IntegerLiteral(0);
Absyn.MethodDecl m = new Absyn.MethodDecl(new Absyn.Type(),false,"main", fms, vds, sts, returnnum);
LinkedList<Absyn.MethodDecl> ms = new LinkedList<Absyn.MethodDecl>();
ms.add(m);
{if (true) return new Absyn.ClassDecl(name.toString(),parent.toString(),new LinkedList<Absyn.VarDecl>(),ms);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.ClassDecl ClassDecl() throws ParseException {
  Token name = null; Token parent = null;
  Absyn.VarDecl vd = null;
  Absyn.MethodDecl md = null;
  LinkedList<Absyn.VarDecl> vds = new LinkedList<Absyn.VarDecl>();
  LinkedList<Absyn.MethodDecl> mds = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(35);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 41:
      jj_consume_token(41);
      parent = jj_consume_token(ID);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(21);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
      case 51:
      case 67:
      case ID:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
      case 51:
      case ID:
        vd = VarDecl();
                                                                        vds.add(vd);
        break;
      case 67:
        md = MethodDecl();
                                                                                                             mds.add(md);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(22);
    {if (true) return new Absyn.ClassDecl(name.toString(),parent.toString(),vds,mds);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.ThreadDecl ThreadDecl() throws ParseException {
  Token name = null; Token parent = null;
  Absyn.VarDecl vad;
  LinkedList<Absyn.VarDecl> vads = new LinkedList<Absyn.VarDecl>();
  Absyn.MethodDecl md;
  LinkedList<Absyn.MethodDecl> mds = new LinkedList<Absyn.MethodDecl>();
  Absyn.VoidDecl vd;
 LinkedList<Absyn.VoidDecl> vds = new LinkedList<Absyn.VoidDecl>();
    jj_consume_token(35);
    name = jj_consume_token(ID);
    jj_consume_token(41);
    jj_consume_token(89);
    jj_consume_token(21);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
      case 51:
      case 67:
      case ID:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
      case 51:
      case ID:
        vad = VarDecl();
                                                             vads.add(vad);
        break;
      default:
        jj_la1[7] = jj_gen;
        if (jj_2_3(2)) {
          md = MethodDecl();
                                                                                                              mds.add(md);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 67:
            vd = VoidDecl();
                                                                                                                                              vds.add(vd);
            break;
          default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    jj_consume_token(22);
   {if (true) return new Absyn.ThreadDecl(name.toString(),vads,mds);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.VarDecl VarDecl() throws ParseException {
  Token name = null;
  Absyn.Type type;
  Absyn.Expr expr = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
      jj_consume_token(17);
      expr = Expr();
      jj_consume_token(15);
      break;
    case 15:
      jj_consume_token(15);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return new Absyn.VarDecl(type,name.toString(),expr);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.MethodDecl MethodDecl() throws ParseException {
        Absyn.Type type = null;
        Token name;
        Absyn.Formal  param = null;
        Absyn.Stmt    stmt  = null;
        Absyn.Expr    expr  = null;
        Absyn.VarDecl vd = null;
        boolean sync = false;
        LinkedList<Absyn.Formal> params   = new LinkedList<Absyn.Formal>();
        LinkedList<Absyn.VarDecl> locals  = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    jj_consume_token(67);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 81:
      jj_consume_token(81);
      break;
    case 32:
    case 51:
    case ID:
      type = Type();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    name = jj_consume_token(ID);
    jj_consume_token(6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 90:
      jj_consume_token(90);
                                sync = true;
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
    case 51:
    case ID:
      param = Formal();
                                params.add(param);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        jj_consume_token(10);
        param = Formal();
                                                                            params.add(param);
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(7);
    jj_consume_token(21);
    label_7:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_7;
      }
      vd = VarDecl();
                                                locals.add(vd);
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 21:
      case 42:
      case 49:
      case 74:
      case 77:
      case 83:
      case 85:
      case 92:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      stmt = Stmt();
                                stmts.add(stmt);
    }
    jj_consume_token(68);
    expr = Expr();
    jj_consume_token(15);
    jj_consume_token(22);
                  {if (true) return new Absyn.MethodDecl(type, sync, name.toString(),
                                            params, locals, stmts, expr);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.VoidDecl VoidDecl() throws ParseException {
  Token name = null;
  Absyn.VarDecl vd = null;
  LinkedList<Absyn.VarDecl> vds = new LinkedList<Absyn.VarDecl>();
  Absyn.Stmt st = null;
  LinkedList<Absyn.Stmt> sts = new LinkedList<Absyn.Stmt>();
    jj_consume_token(67);
    jj_consume_token(81);
    name = jj_consume_token(ID);
    jj_consume_token(6);
    jj_consume_token(7);
    jj_consume_token(21);
    label_9:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_9;
      }
      vd = VarDecl();
                                                                        vds.add(vd);
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 21:
      case 42:
      case 49:
      case 74:
      case 77:
      case 83:
      case 85:
      case 92:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      st = Stmt();
                                                                                                       sts.add(st);
    }
    jj_consume_token(22);
   {if (true) return new Absyn.VoidDecl(name.toString(),vds,sts);}
    throw new Error("Missing return statement in function");
  }

//Formal(Type type, String name)
  final public Absyn.Formal Formal() throws ParseException {
        Absyn.Type type;
        Token name;
    type = Type();
    name = jj_consume_token(ID);
          {if (true) return new Absyn.Formal(type, name.toString());}
    throw new Error("Missing return statement in function");
  }

//Absyn.FieldDecl FieldDecl():
//{
//  Absyn.Type type;
//  Token name = null;
//}
//{
//   type = Type() name = <ID> ";"
  // { return new FieldDecl(type,name); } 
//}
  final public Absyn.Type Type() throws ParseException {
 Absyn.Type t;
    if (jj_2_6(2147483647)) {
      t = BooleanType();
    } else if (jj_2_7(2147483647)) {
      t = IntegerType();
    } else if (jj_2_8(2147483647)) {
      t = IdentifierType();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    t = Tprime(t);
        {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.Type Tprime(Absyn.Type t) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      t = ArrayType(t);
      break;
    default:
      jj_la1[16] = jj_gen;

    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.Type ArrayType(Absyn.Type t) throws ParseException {
    label_11:
    while (true) {
      jj_consume_token(19);
      jj_consume_token(20);
      if (jj_2_9(2)) {
        ;
      } else {
        break label_11;
      }
    }
  {if (true) return new Absyn.ArrayType(t);}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.Type BooleanType() throws ParseException {
    jj_consume_token(32);
    {if (true) return new Absyn.BooleanType();}
    throw new Error("Missing return statement in function");
  }

  final public Absyn.Type IntegerType() throws ParseException {
    jj_consume_token(51);
    {if (true) return new Absyn.IntegerType();}
    throw new Error("Missing return statement in function");
  }
